# playground

./: .gitignore  AGENTS.md  CLAUDE.md  E2E_TEST_ANALYSIS.md  GEMINI.md  README.md  SESSION_SUMMARY.md  Taskfile.yaml  claude-task.txt  deploy-cluster.sh  setup-flux.sh  task-claude.md  task-gemini.md
.claude/: settings.json
.gemini/: settings.json
.github/: dependabot.yml
bootstrap/: README.md  bootstrap-control-plane-cluster.sh  orchestrator.py
demo/: github-actions-claude-workflow.md
docs/: agentic-architecture.md  cluster-provisioning-spec.md  flux-gitops.md  flux-operator-migration.md  github-app-setup.md  github-integration.md  infrastructure.md  kagent-a2a-workflow.md  observability-setup.md  operations.md  orchestrator.md  running-chaos-experiments.md  setup-guide.md  tenants.md  upgrade-versions.md
flux/: bootstrap.yaml  kustomization.yaml  sources.yaml
flux-test/: gitrepository.yaml  kustomization.yaml  test-configmap.yaml
gcp-claude/: cloudrun-composition.yaml  cloudrun-xrd.yaml  fortio-service-claim.yaml  fortio-service.yaml
gcp-gemini/: cloudrun-service-composition.yaml  cloudrun-service-xrd.yaml  fortio-claim.yaml
infra-setup/: 00-cleanup.sh  00-dump.sh  01-once-gcp-resources-setup.sh  02-create-and-setup-kind.sh  03-apply-compositions.sh  03-deploy-gke-clusters.sh  03-w-deploy-gke-clusters-wait.sh  04-setup-gke-clusters.sh  (+8 more)
orchestrator/: check_env.py  llm_router.py  main.py  mission.md  pyproject.toml  rewrite-plan.md  schemas.py  signatures.py  spec.md  telemetry.py
orchestrator/phases/: bootstrap.md  control.md  workload.md
(+562 files in other folders)
