[project]
name = "orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dspy-ai>=2.5.0",
    "litellm>=1.40.0",
    "pydantic>=2.0.0",
    "opentelemetry-api>=1.41.0",
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-exporter-gcp-trace>=1.11.0",
    "opentelemetry-exporter-gcp-monitoring>=1.11.0a0",
    "google-cloud-trace>=1.19.0",
    "google-cloud-monitoring>=2.30.0",
]
